# game-scheduler

./: .actrc  .dockerignore  .env.example  .env.integration  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT_QUICKSTART.md  DOCKER_PORTS.md  Makefile  README.md  RUNTIME_CONFIG.md  TESTING_E2E.md  alembic.ini  compose.e2e.yaml  compose.int.yaml  compose.override.yaml  compose.prod.yaml  compose.production.yaml  compose.restore.yaml  compose.staging.yaml  compose.yaml  config  conftest.py  docker-compose.base.yml  docker-compose.e2e.yml  docker-compose.integration.yml  docker-compose.test.yml  docker-compose.yml  output-coverage.txt  pyproject.toml
.copilot-tracking/: remediation-summary-20251220-discord-permission-checking.md
.copilot-tracking/changes/: 20251114-discord-game-scheduling-system-changes.md  20251127-database-backed-notification-scheduler-changes.md  20251127-frontend-docker-build-optimization-changes.md  20251127-validation-on-submit-changes.md  20251128-environment-initialization-service-changes.md  20251129-game-model-refactor-changes.md  20251130-remove-guild-name-from-database-changes.md  20251201-game-template-system-changes.md  20251201-remove-channel-name-from-database-changes.md  20251203-celery-elimination-notification-consolidation-changes.md  20251203-ui-cleanup-changes.md  20251204-api-authorization-audit-changes.md  20251204-fix-authorization-test-failures-changes.md  20251205-daemon-bot-message-reliability-changes.md  20251205-rabbitmq-runtime-configuration-changes.md  20251206-docker-base-image-updates-changes.md  20251206-opentelemetry-observability-changes.md  20251207-docker-development-volume-mount-changes.md  20251210-alloy-self-monitoring-changes.md  20251210-test-instance-deployment-issues-changes.md  20251211-docker-compose-environment-reorganization-changes.md  20251211-rabbitmq-messaging-cleanup-changes.md  20251213-role-service-missing-method-changes.md  20251214-npm-warnings-elimination-changes.md  20251214-npm-warnings-phase3-mui-upgrade-changes.md  20251214-npm-warnings-phase4-utilities-upgrade-changes.md  20251214-precommit-hooks-with-tests-changes.md  20251215-dependency-version-audit-changes.md  20251216-docker-in-docker-act-path-mounting-changes.md  20251218-discord-calendar-download-changes.md  20251218-game-image-attachments-changes.md  20251218-signup-instructions-dm-changes.md  20251219-game-card-host-avatar-display-changes.md  20251220-discord-client-consolidation-changes.md  20251220-game-card-ui-consolidation-changes.md  20251222-discord-client-token-unification-changes.md  20251222-e2e-test-strategy-changes.md  20251224-participant-ordering-schema-refactor-changes.md  20251224-promotion-detection-placeholder-bug-changes.md  20251225-e2e-polling-patterns-changes.md  (+45 more)
.copilot-tracking/details/: 20251114-discord-game-scheduling-system-details.md  20251128-environment-initialization-service-details.md  20251129-game-model-refactor-details.md  20251130-remove-guild-name-from-database-details.md  20251203-celery-elimination-notification-consolidation-details.md  20251203-ui-cleanup-details.md  20251204-api-authorization-audit-details.md  20251204-fix-authorization-test-failures-details.md  20251205-daemon-bot-message-reliability-details.md  20251205-rabbitmq-runtime-configuration-details.md  20251206-opentelemetry-observability-details.md  20251210-test-instance-deployment-issues-details.md  20251211-docker-compose-environment-reorganization-details.md  20251213-role-service-missing-method-details.md  20251214-nektos-act-local-testing-details.md  20251214-precommit-hooks-with-tests-details.md  20251216-docker-in-docker-act-path-mounting-details.md  20251218-discord-calendar-download-details.md  20251218-signup-instructions-dm-details.md  20251220-game-card-ui-consolidation-details.md  20251222-e2e-test-strategy-details.md  20251224-participant-ordering-schema-refactor-details.md  20251225-e2e-polling-patterns-details.md  20251226-multiple-signup-methods-details.md  20260101-middleware-rls-guild-isolation-details.md  20260204-mit-license-migration-details.md  20260205-01-web-join-game-ux-details.md  20260205-channel-sync-via-guild-sync-button-details.md  20260207-01-game-form-validation-details.md  20260214-01-discord-webhook-events-automatic-sync-details.md  (+4 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
alembic/: env.py
config.template/: env.template
docker/: Caddyfile.prod  Caddyfile.staging  api.Dockerfile  backup-entrypoint.sh  backup-script.sh  backup.Dockerfile  bot.Dockerfile  frontend-config.template.js  frontend-entrypoint.sh  frontend-nginx.conf  frontend.Dockerfile  init-entrypoint.sh  init.Dockerfile  migrate-entrypoint.sh  migrate.Dockerfile  notification-daemon-entrypoint.sh  notification-daemon.Dockerfile  participant-action-daemon.Dockerfile  rabbitmq.Dockerfile  redis-entrypoint.sh  restore-script.sh  retry.Dockerfile  scheduler-entrypoint.sh  scheduler.Dockerfile  status-transition-daemon.Dockerfile  test-entrypoint.sh  test.Dockerfile
docs/: CLOUDFLARE_TUNNEL_SETUP.md  DOCKER_COMPOSE_DEPENDENCIES.md  GUILD-ADMIN.md  HOST-GUIDE.md  LOCAL_TESTING_WITH_ACT.md  PLAYER-GUIDE.md
frontend/: .eslintignore  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  package.json.v5.backup  vite.config.ts  vitest.config.ts
grafana-alloy/: SETUP_GRAFANA_CLOUD.md  TESTING_PHASE1.md  TESTING_PHASE2.md  TESTING_PHASE4.md  config.alloy
rabbitmq/: definitions.json  definitions.json.template  rabbitmq.conf
scripts/: add-copyright  check_commit_duplicates.py  check_lint_suppressions.py  check_test_assertions.py  coverage-report.sh  data_migration_create_default_templates.py  generate_trace_record.sh  init_rabbitmq.py  migrate_postgres_15_to_17.sh  restore.sh  run-act.sh  run-e2e-tests.sh  run-integration-tests.sh  show-implement-prompt.sh  show_trace_counts.sh  verify_button_states.py
services/: __init__.py
shared/: database.py  message_formats.py  telemetry.py
templates/: agpl-template.jinja2
tests/: conftest.py
(+892 files in other folders)
