[project]
name = "Game_Scheduler"
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = [
  {name = "Bret McKee", email = "bret.mckee@gmail.com"},
]
description = "Discord game scheduling system with microservices architecture"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "aio-pika>=9.3.0",
    "pika>=1.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "cryptography>=41.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.urls]
Repository = "https://github.com/game-scheduler"
Issues = "https://github.com/game-scheduler/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["shared", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "autocopyright>=1.1.0",
]
