[project]
name = "Game_Scheduler"
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = [
  {name = "Bret McKee", email = "bret.mckee@gmail.com"},
]
description = "Discord game scheduling system with microservices architecture"
requires-python = ">=3.13"
dependencies = [
    # Core Framework
    "discord.py~=2.6.0",
    "audioop-lts~=0.2.0",  # Python 3.13+ compatibility for discord.py voice support
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.34.0",
    # Database
    "sqlalchemy[asyncio]~=2.0.36",
    "asyncpg~=0.30.0",
    "psycopg2-binary~=2.9.10",
    "alembic~=1.14.0",
    "alembic-utils~=0.8.0",
    # Data Validation
    "pydantic~=2.10.0",
    "pydantic-settings~=2.7.0",
    # Storage & Messaging
    "redis~=5.2.0",
    "aio-pika~=9.5.0",
    "pika~=1.3.0",
    # HTTP Clients
    "httpx~=0.28.0",
    "aiohttp~=3.11.0",
    "python-multipart~=0.0.20",
    # Security
    "cryptography~=44.0.0",
    "python-jose[cryptography]~=3.3.0",
    # Utilities
    "icalendar~=6.0.0",
    # Observability
    "opentelemetry-api~=1.29.0",
    "opentelemetry-sdk~=1.29.0",
    "opentelemetry-instrumentation-fastapi~=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy~=0.50b0",
    "opentelemetry-instrumentation-asyncpg~=0.50b0",
    "opentelemetry-instrumentation-redis~=0.50b0",
    "opentelemetry-instrumentation-aio-pika~=0.50b0",
    "opentelemetry-exporter-otlp~=1.29.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.urls]
Repository = "https://github.com/game-scheduler"
Issues = "https://github.com/game-scheduler/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "services*"]
exclude = ["tests*", "frontend*", "docker*", "alembic*", "rabbitmq*", "templates*", "history*", "grafana-alloy*", "env*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["shared", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
# Enable helpful checks without being overly strict
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
explicit_package_bases = true
namespace_packages = true

# Disable strict checks that cause issues with external libraries
# and legacy code
no_implicit_optional = false
strict_optional = false

# Ignore missing imports from external libraries
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest~=8.3.0",
    "pytest-asyncio~=0.24.0",
    "pytest-cov~=6.0.0",
    "ruff~=0.9.0",
    "mypy~=1.15.0",
    "autocopyright~=1.1.0",
    "pre-commit~=4.0.0",
]
